[project]
name = "maze-search"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com" }]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
