[project]
name = "maze-search"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com" }]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[dependency-groups]
lint = ["ruff>=0.8.6"]

[tool.pdm.scripts]
lint = "ruff check . --exit-non-zero-on-fix"
lint-fix = "ruff check . --fix --exit-non-zero-on-fix"

[tool.ruff]
include = ["*.py"]
exclude = ["venv"]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
preview = true
select = [
    # default
    "N",
    "E", # pycodestyle error
    "F", # flake8 error
    "W", # pycodestyle warning
    "I", # isort imports
    "D",
    # extra
    "UP",    # upgade syntax
    "ANN",
    "ASYNC",
    "S",     # bandit
    "BLE",   # aboid bare excepts
    "B",     # flake8 bugbear
    "A",     # builtin shadowing
    "COM",
    "CPY",
    "C4",    # simplify comprehensions
    "EM",
    "G",     # logging format
    "INP",
    "PYI",
    "PT",
    "Q",
    "RET",   # return values
    "SLF",
    "ARG",
    "PTH",
    "PL",
    "TRY",   # exceptions antipatterns
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
    "TID",
    "DTZ",   # datetime errors
    "FBT",   # avoid boolean trap
    "YTT",   # wrong usage of sys.info
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"*.py" = ["D100", "CPY001"]
"__init__.py" = ["D104"]
